--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cerata.robodoc">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission. ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RoboDoc">
-        <activity android:name=".ShowResultDoctorListActivity"></activity>
+        <activity android:name=".RegistrationActivity"></activity>
+        <activity android:name=".ShowResultDoctorListActivity" />
         <activity android:name=".ShowResultDiseaseListActivity" />
         <activity android:name=".SelectSymptomsActivity" />
         <activity android:name=".ShowDiseaseDetailsActivity" />
@@ -20,7 +25,6 @@
         <activity android:name=".ChangeUserInfoActivity" />
         <activity android:name=".UserDashboardActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".RegistrationActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
