--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RoboDoc">
-        <activity android:name=".RegistrationActivity"></activity>
+        <activity android:name=".ShowLocationRequest"></activity>
+        <activity android:name=".RegistrationActivity" />
         <activity android:name=".ShowResultDoctorListActivity" />
         <activity android:name=".ShowResultDiseaseListActivity" />
         <activity android:name=".SelectSymptomsActivity" />
